Create components and modify files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <app-header></app-header>
 
-<!-- <img src="/src/assets/" alt=""> -->
+<app-sidenav></app-sidenav>
 
-<h1>Henrry Alex Gutierrez Condori</h1>
+<router-outlet></router-outlet>
 
-<app-about-me></app-about-me>
-<app-projects></app-projects>
+<app-bottomnav></app-bottomnav>
