--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,2 @@
-* {    
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
+
+$primary: #fcdab7;
