Order all items

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,29 @@
 <section class="home-content">
     <div class="home-content-item">
-        <h1 class="i">What's up?, <span class="my-name">I'm Henrry Gutierrez</span></h1>
+        <div class="container">
+            <div class="box">        
+                <div class="title">
+                    <span class="block"></span>
+                    <h1 class="i">What's up?, <span class="my-name">I'm Henrry Gutierrez</span><span class="span"></span> </h1>
+                    <!--<h1>Kaio Almeida<span></span></h1>-->
+                </div>        
+                <div class="role">
+                    <div class="block"></div>                    
+                    <div id=container-flip class="p">
+                        Make
+                            <div id=flip>
+                              <div><div>FullStack Developer</div></div>
+                              <div><div>Mobile Developer</div></div>
+                              <div><div>Software Ingenier</div></div>
+                            </div>
+                            AweSoMe!
+                    </div>   
+                </div>        
+            </div>
+        </div>                
     </div>
     <div class="home-content-item">
-        <div id=container-flip>
-            <!--Make -->    
-                <div id=flip>
-                  <div><div>FullStack Developer</div></div>
-                  <div><div>Mobile Developer</div></div>
-                  <div><div>Software Ingenier</div></div>
-                </div>
-                <!--AweSoMe!-->
-              </div>       
+            
     </div>
     <div class="home-content-item">
         <p>
@@ -27,26 +39,4 @@
 
 
 </section>
-
-<section>
-    <div class="container">
-        <div class="box">
-    
-            <div class="title">
-                <span class="block"></span>
-                <h1>Kaio Almeida<span></span></h1>
-            </div>
-    
-            <div class="role">
-                <div class="block"></div>
-                <p>UI Dev designer</p>
-            </div>
-    
-        </div>
-    </div>
-</section>
-
-<div id="underscore">
-    &#95; &verbar; &#124;
-</div>
 
