--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -166,17 +166,17 @@ CONTAINER TEXT ENTER
 ************/
 
 .container {
-  width: 100%;
-  height: 100vh;
-  background: #232323;
+  /*width: 100%;
+  height: 100vh;*/
+  /*background: #232323;*/
 
   display: flex;
   justify-content: center;
   align-items: center;
 
   .box {
-    width: 250px;
-    height: 250px;
+    /*width: 250px;
+    height: 250px;*/
     position: relative;
     display: flex;
     justify-content: center;
@@ -185,13 +185,13 @@ CONTAINER TEXT ENTER
     .title {
       width: 100%;
       position: relative;
-      display: flex;
+/*      display: flex;*/
       align-items: center;
-      height: 50px;
+     /* height: 50px;*/
 
       .block {
         width: 0%;
-        height: inherit;
+        height: 50px;
         background: #ffb510;
         position: absolute;
         animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
@@ -199,19 +199,19 @@ CONTAINER TEXT ENTER
       }
 
       h1 {
-        font-family: 'Poppins';
+        /*font-family: 'Poppins';
         color: #fff;
-        font-size: 32px;
+        font-size: 32px;*/
         -webkit-animation: mainFadeIn 2s forwards;
         -o-animation: mainFadeIn 2s forwards;
         animation: mainFadeIn 2s forwards;
         animation-delay: 1.6s;
         opacity: 0;
-        display: flex;
-        align-items: baseline;
-        position: relative;
+        /*display: flex;*/
+        /*align-items: baseline;
+        position: relative;*/
 
-        span {
+        /*.span {
           width:0px;
           height: 0px;
           -webkit-border-radius: 50%;
@@ -228,21 +228,21 @@ CONTAINER TEXT ENTER
           bottom: 13px;
           right: -12px;
 
-        }
+        }*/
       }
     }
 
     .role {
       width: 100%;
-      position: relative;
+      /*position: relative;
       display: flex;
-      align-items: center;
-      height: 30px;
       margin-top: -10px;
+      align-items: center;
+      height: 30px;*/
 
       .block {
         width: 0%;
-        height: inherit;
+        height: 30px;        
         background: #e91e63;
         position: absolute;
         animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
@@ -250,7 +250,7 @@ CONTAINER TEXT ENTER
         display: flex;
       }
 
-      p {
+      .p {
         animation: secFadeIn 2s forwards;
         animation-delay: 3.2s;
         opacity: 0;
@@ -264,9 +264,6 @@ CONTAINER TEXT ENTER
     }
   }
 }
-
-
-
 
 
 @keyframes mainBlock {
@@ -358,40 +355,6 @@ CONTAINER TEXT ENTER
   }
 }
 
-
-
-
-footer {
-  width: 350px;
-  height: 80px;
-  background: #ffb510;
-  position: absolute;
-  right: 0;
-  bottom: -80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-   animation: top 0.8s forwards;
-   animation-delay: 4s;
-  span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    color: #232323;
-    font-family: 'Poppins';
-
-    i {
-      margin-right: 25px;
-      font-size: 22px;
-      color: #232323;
-      animation: icon 2s forwards;
-      animation-delay: 4s;
-      opacity: 0;
-    }
-  }
-}
-
 /**
 UNDERSCORE
 */
@@ -399,10 +362,3 @@ UNDERSCORE
 .hidden {
   opacity:0;
 }
-.console-underscore {
-  display:inline-block;
- position:relative;
- top:-0.14em;
- left:10px;
-}
-
