--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li>
-                <a routerLink="/about-me" routerLinkActive="active" >
+                <a routerLink="about-me" routerLinkActive="active" >
                     <span class="icon"><i class="material-icons">person</i></span>
                     <span class="item">About Me</span>
                 </a>
