--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -362,3 +362,11 @@ UNDERSCORE
 .hidden {
   opacity:0;
 }
+
+.lotie {
+  position: absolute;  
+  top: 20px;
+  right: 20px;
+  width: 250px;
+  height: 250px;  
+}
