update to migrate next version

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,28 @@
     <div class="logo">
         <img src="/assets/icons/icon-72x72.png" alt="My Logo">
     </div>
+
+
+    <ul>
+      
+      <li>
+        <a [routerLink]="['/home']" routerLinkActive="active-link" >Home</a>
+      </li>
+      
+      <li>       
+        <a [routerLink]="['/about-me']" routerLinkActive="active-link" >Whoami</a>
+      </li>
+      
+      <li>       
+        <a [routerLink]="['/projects']" routerLinkActive="active-link" >Projects</a>
+      </li>
+      
+      <li>       
+        <a [routerLink]="['/contact']" routerLinkActive="active-link" >Contact</a>
+      </li>
+      
+    </ul>
+
     <!--<div class="push-left">
         <button id="menu-toggler" data-class="menu-active" class="hamburger">
           <span class="hamburger-line hamburger-line-top"></span>
