--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<main [@routeAnimations]="prepareRoute(outlet)" class="content">
+    <router-outlet #outlet="outlet"></router-outlet>
+</main>
 
-<app-bottomnav></app-bottomnav>
+<!--<app-bottomnav></app-bottomnav>-->
