--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,68 +1,29 @@
-<section class="home-content">
-    <div class="home-content-item">
-        <div class="container">
-            <div class="box">        
-                <div class="title">
-                    <span class="block"></span>
-                    <h1 class="i">What's up?, <span class="my-name">I'm Henrry Gutierrez</span><span class="span"></span> </h1>
-                    <!--<h1>Kaio Almeida<span></span></h1>-->
-                </div>        
-                <div class="role">
-                    <div class="block"></div>                    
-                    <div id=container-flip class="p">
-                        Make
-                            <div id=flip>
-                              <div><div>FullStack Developer</div></div>
-                              <div><div>Java Developer</div></div>
-                              <div><div>Mobile Developer</div></div>
-                              <div><div>Software Ingenier</div></div>
-                            </div>
-                        AweSoMe!
-                    </div>   
-                </div>        
-            </div>
-        </div>                
-    </div>
-    <div class="home-content-item">
-            
-    </div>
-    <div class="home-content-item">
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit molestiae illo eos, laboriosam,
-            maiores ipsam dolor consequatur quia necessitatibus architecto unde, voluptatum ad asperiores 
-            illum dicta voluptatibus ab vero eveniet.
-        </p>
-    </div>
+<section class="center">
+  <span id="say-hello">
+    Hola, Yo soy <span id="my-name">¡Henrry Gutierrez!</span>
+  </span>
+  <div id="spacer"></div>
+  <div class="h1a">
+    <h1 class="h1">Mobile Developer</h1>
+    <h1 class="h1">FullStack Developer</h1>
+    <h1 class="h1">Java Developer</h1>
+  </div>
+  <div class="block"></div>
 </section>
 
-<section>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-
-
-</section>
-
-<section class="lotie">
-    
-    <main lottie [options]="options2" (animationCreated)="animationCreated($event)"></main>
+<section class="lottie">
+  <main
+    lottie
+    [options]="options2"
+    (animationCreated)="animationCreated($event)"
+  ></main>
 </section>
 
 <ng-lottie
-        width="600px"
-        height="500px"
-        containerClass="moving-box another-class"
-        [options]="options"
-    ></ng-lottie>
+  width="200px"
+  height="200px"
+  containerClass="moving-box another-class"
+  [options]="options"
+  class="computer"></ng-lottie>
+
   
-<!-- 
-    [styles]="styles"
-    (animationCreated)="animationCreated($event)"
-    (configReady)="configReady()"
-    (dataReady)="dataReady()"
-    (domLoaded)="domLoaded()"
-    (enterFrame)="enterFrame($event)"
-    (segmentStart)="segmentStart($event)"
-    (complete)="complete($event)"
-    (loopComplete)="loopComplete($event)"
-    (destroy)="destroy($event)"
-    (error)="error($event)"
--->
