--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,298 +1,148 @@
+$primary: #e4ebf2;
+$secondary: #86c6e7;
+$ternary: #c4ddf2;
+$dark: #192e59;
 
-$primary: #E4EBF2;
-$secondary: #86C6E7;
-$ternary: #C4DDF2;
-$dark: #192E59;
+.center {
+ /*  display: grid;
+ align-content: center;
+ justify-items: center;
+   align-items: center;
+  
+  padding: 20px;
+  margin-right: -50%; */
 
-.home-content {
-  transform: translate(0%, 50%);
-  text-align: center;
+  position: absolute;
+  top: 40%;
+  left: 50%;  
+  transform: translate(-50%, -50%);
 }
 
-.home-content-item {
-  padding: 0.5em;
+#say-hello {
+  font-size: 3em;
+  display: block;
+  font-family: monospace;
+  white-space: nowrap;
+  border-right: 4px solid;
+  width: 31ch;
+  animation: typing 5s steps(31), blink 0.5s infinite step-end alternate;
+  overflow: hidden;
+
+  #my-name {
+    font-weight: 700;
+  }
 }
 
-h1, h2 {
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.h1a {
+  display: grid;
+  width: 100%;  
+  justify-items: center;
+  animation: myAnim 6s forwards;   
+  
+  @keyframes myAnim {
+    0%{
+      opacity: 0;
+  }
+  99.99%{
+      opacity: 0;
+  }
+  100%{
+      opacity: 1;
+  }
+  }   
+}
+
+.h1 {
+  animation: morph-effect 7.5s infinite ease-in-out;
+  position: absolute;
+  font-size: 3.5em;
+  font-family: Lobster;
+  padding: 16px;
+  border-radius: 8px;
+
+  @keyframes morph-effect {
+    0%,
+    20%,
+    100% {
+      filter: blur(0px);
+      opacity: 1;
+    }
+
+    40%,
+    60% {
+      filter: blur(16px);
+      opacity: 0;
+    }
+  }
+}
+
+.h1:nth-child(1) {
+  animation-delay: -2.5s;
+  background-color: #192e59;
+}
+
+.h1:nth-child(2) {
+  animation-delay: -5s;
+  background-color: #e91e63;
+}
+
+.h1:nth-child(3) {
+  animation-delay: -7.5s;
+  background-color: #86c6e7;
+}
+
+
+h1,
+h2 {
   font-family: "Ubuntu";
 }
 
-h1 {
-  font-size: 2em;
-  color: $primary;
-}
-
-.my-name {
-  font-family: 'Dancing Script';
-  font-weight: 900;
-}
-
-.i {
-  &:after {
-    content: '|';
-    position: absolute;
-    /*right: 0;*/
-    font-weight: 900;
-    padding-left: .2em;
-  }
-  &:after {
-    position: absolute;
-    top: 0;
-    
-    color: #16a085;
-    font-size: 42px;
-    line-height: 40px;
-    
-    -webkit-animation-name: opacity;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: opacity;
-    animation-duration: .6s;
-    animation-iteration-count: infinite;
-  }
-}
-
-li {
-  /*font-size: 1.5em;*/
-  color: $secondary;
-}
-
-p {
-  width: 50%;
-  color: $primary;
-  transform: translate(50%, 0%);
-}
-
-
-
-/***
-TEXT FLIP
-**/
 
 
 #container-flip {
-  color:$primary;
+  color: $primary;
   text-transform: uppercase;
-  font-size:36px;
-  font-weight:bold;
+  font-size: 36px;
+  font-weight: bold;
   /*padding-top:200px; 
   position:fixed;*/
-  width:100%;
+  width: 100%;
   /*bottom:45%;
   display:block;*/
 }
 
-#flip {
-  height:50px;
-  overflow:hidden;
-}
 
-#flip > div > div {
-  color:#fff;
-  padding:4px 4px;
-  height:45px;
-  margin-bottom:45px;
-  display:inline-block;
-}
-
-#flip div:first-child {
-  animation: show 5s linear infinite;
-}
-
-#flip div div {
-  background:#42c58a;
-}
-#flip div:first-child div {
-  background:#4ec7f3;
-}
-#flip div:last-child div {
-  background:#DC143C;
-}
-
-@keyframes show {
-  0% {margin-top:-270px;}
-  5% {margin-top:-180px;}
-  33% {margin-top:-180px;}
-  38% {margin-top:-90px;}
-  66% {margin-top:-90px;}
-  71% {margin-top:0px;}
-  99.99% {margin-top:0px;}
-  100% {margin-top:-270px;}
-}
-/*
-p {
-  position:fixed;
-  width:100%;
-  bottom:30px;
-  font-size:12px;
-  color:#999;
-  margin-top:200px;
-}*/
-
-/*
-end flip
-*/
-
-@-webkit-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-
-
-@-o-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-
-
-@-moz-keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-
-@keyframes opacity {
-  0%, 100% {opacity:0;}
-  50% {opacity:1;}
-}
-
-
-/*****
-
-CONTAINER TEXT ENTER
-
-************/
-
-.container {
-  /*width: 100%;
-  height: 100vh;*/
-  /*background: #232323;*/
-
+.block {
+  width: 0%;
+  height: 90px;  
+  background: #e91e63;
+  position: absolute;
+  animation: secBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;  
   display: flex;
-  justify-content: center;
-  align-items: center;
-
-  .box {
-    /*width: 250px;
-    height: 250px;*/
-    position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    .title {
-      width: 100%;
-      position: relative;
-/*      display: flex;*/
-      align-items: center;
-     /* height: 50px;*/
-
-      .block {
-        width: 0%;
-        height: 50px;
-        background: #ffb510;
-        position: absolute;
-        animation: mainBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
-        display: flex;
-      }
-
-      h1 {
-        /*font-family: 'Poppins';
-        color: #fff;
-        font-size: 32px;*/
-        -webkit-animation: mainFadeIn 2s forwards;
-        -o-animation: mainFadeIn 2s forwards;
-        animation: mainFadeIn 2s forwards;
-        animation-delay: 1.6s;
-        opacity: 0;
-        /*display: flex;*/
-        /*align-items: baseline;
-        position: relative;*/
-
-        /*.span {
-          width:0px;
-          height: 0px;
-          -webkit-border-radius: 50%;
-          -moz-border-radius: 50%;
-          border-radius: 50%;
-
-          background: #ffb510;
-          -webkit-animation: load 0.6s cubic-bezier(.74, .06, .4, .92) forwards;
-          animation: popIn 0.8s cubic-bezier(.74, .06, .4, .92) forwards;
-          animation-delay: 2s;
-          margin-left: 5px;
-          margin-top: -10px;
-          position: absolute;
-          bottom: 13px;
-          right: -12px;
-
-        }*/
-      }
-    }
-
-    .role {
-      width: 100%;
-      /*position: relative;
-      display: flex;
-      margin-top: -10px;
-      align-items: center;
-      height: 30px;*/
-
-      .block {
-        width: 0%;
-        height: 30px;        
-        background: #e91e63;
-        position: absolute;
-        animation: secBlock 2s cubic-bezier(.74, .06, .4, .92) forwards;
-        animation-delay: 2s;
-        display: flex;
-      }
-
-      .p {
-        animation: secFadeIn 2s forwards;
-        animation-delay: 3.2s;
-        opacity: 0;
-         font-weight: 400;
-        font-family: 'Lato';
-        color: #ffffff;
-        font-size: 12px;
-        text-transform: uppercase;
-        letter-spacing: 5px;
-      }
-    }
-  }
+  animation-delay: 5s;
 }
 
-
-@keyframes mainBlock {
-  0% {
-    width: 0%;
-    left: 0;
-
-  }
-  50% {
-    width: 100%;
-    left: 0;
-
-  }
-  100% {
-    width: 0;
-    left: 100%;
-  }
-}
 
 @keyframes secBlock {
   0% {
     width: 0%;
     left: 0;
-
   }
   50% {
     width: 100%;
     left: 0;
-
   }
   100% {
     width: 0;
@@ -309,43 +159,6 @@ CONTAINER TEXT ENTER
   }
 }
 
-
-@keyframes popIn {
-  0% {
-    width: 0px;
-    height: 0px;
-    background: #e9d856;
-    border: 0px solid #ddd;
-    opacity: 0;
-  }
-  50% {
-    width: 10px;
-    height: 10px;
-    background: #e9d856;
-    opacity: 1;
-    bottom: 45px;
-  }
-   65% {
-      width: 7px;
-    height: 7px;
-      bottom: 0px;
-      width: 15px
-   }
-   80% {
-      width: 10px;
-    height: 10px;
-      bottom: 20px
-   }
-  100% {
-    width: 7px;
-    height: 7px;
-    background: #e9d856;
-    border: 0px solid #222;
-    bottom: 13px;
-
-  }
-}
-
 @keyframes secFadeIn {
   0% {
     opacity: 0;
@@ -355,18 +168,29 @@ CONTAINER TEXT ENTER
   }
 }
 
-/**
-UNDERSCORE
-*/
-
 .hidden {
-  opacity:0;
+  opacity: 0;
 }
 
-.lotie {
-  position: absolute;  
-  top: 20px;
-  right: 20px;
-  width: 250px;
-  height: 250px;  
+.lottie {
+  opacity: 0.1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;  
+  width: 100%;
+  height: 100%;
+}
+
+.computer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+
+#spacer {
+  height: 35px;
 }
