--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,3 +1,193 @@
- <h1>
-    projects compoenen
- </h1>
+<p>BACKEND</p>
+
+<p>FRONTEND</p>
+
+<p>MBOBILE</p>
+
+<p>DEVOPS</p>
+
+<p>DATA SCIENCE</p>
+
+<h1>Proyectos academicos</h1>
+
+<h1>Proyectos laborales</h1>
+
+<h1>Proyectos personales</h1>
+
+<h1>Proyectos de formacion</h1>
+
+<router-outlet></router-outlet>
+
+
+<!--
+
+<section>
+  <swiper (swiper)="onSwiper($event)" [loop]="true" (slideChange)="onSlideChange()" [slidesPerView]="3"
+    [spaceBetween]="50" [pagination]="{
+      clickable: true
+    }" [breakpoints]="{
+      '640': {
+        slidesPerView: 2,
+        spaceBetween: 20
+      },
+      '768': {
+        slidesPerView: 3,
+        spaceBetween: 40
+      },
+      '1024': {
+        slidesPerView: 4,
+        spaceBetween: 50
+      }
+    }" [autoHeight]="true">
+    <ng-template swiperSlide>
+      Slide 1
+      <p>
+        data lorem dad Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Cum illum magni debitis possimus? Possimus exercitationem minima quod
+        est enim fuga dolor corrupti eius similique porro officia, officiis quo
+        dicta natus?
+      </p>
+    </ng-template>
+    <ng-template swiperSlide>Slide 3</ng-template>
+    <ng-template swiperSlide>Slide 3</ng-template>
+    <ng-template swiperSlide>Slide 2
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate
+        facilis eligendi non magnam possimus minus ab explicabo! Explicabo porro
+        neque possimus omnis impedit eaque in corrupti exercitationem sapiente
+        consequatur?
+      </p>
+    </ng-template>
+    <ng-template swiperSlide>Slide 3</ng-template>
+    <ng-template swiperSlide>Slide 3</ng-template>
+  </swiper>
+</section>
+
+<div style="height: 190px"></div>
+
+<section>
+  <swiper [slidesPerView]="3" [spaceBetween]="30" [grabCursor]="true" [centeredSlides]="true" [slidesPerGroup]="3"
+    [loop]="true" [loopFillGroupWithBlank]="true" [pagination]="{clickable: true}" [navigation]="true" class="mySwiper">
+    <ng-template swiperSlide>Slide 1 Slide 1 Slide 1 Slide 1 Slide 1</ng-template>
+    <ng-template swiperSlide>Sli Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate
+      facilis eligendi non magnam possimus minus ab explicabo! Explicabo porro
+      neque possimus omnis impedit eaque in corrupti exercitationem sapiente
+      consequatur?de 2</ng-template>
+    <ng-template swiperSlide>Slide 3</ng-template>
+    <ng-template swiperSlide>Slide 4</ng-template>
+    <ng-template swiperSlide> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate
+      facilis eligendi non magnam possimus minus ab explicabo! Explicabo porro
+      neque possimus omnis impedit eaque in corrupti exercitationem sapiente
+      consequatur? 5</ng-template>
+    <ng-template swiperSlide>Slide 6</ng-template>
+    <ng-template swiperSlide>Sl Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptate
+      facilis eligendi non magnam possimus minus ab explicabo! Explicabo porro
+      neque possimus omnis impedit eaque in corrupti exercitationem sapiente
+      consequatur?ide 7</ng-template>
+    <ng-template swiperSlide>Slide 8</ng-template>
+    <ng-template swiperSlide>Slide 9</ng-template>
+  </swiper>
+</section>
+
+
+<section>
+  <swiper
+  [slidesPerView]="1"
+  [spaceBetween]="10"
+  [pagination]="{
+    clickable: true
+  }"
+  [breakpoints]="{
+    '640': {
+      slidesPerView: 2,
+      spaceBetween: 20
+    },
+    '768': {
+      slidesPerView: 4,
+      spaceBetween: 40
+    },
+    '1024': {
+      slidesPerView: 5,
+      spaceBetween: 50
+    }
+  }"
+  class="mySwiper"
+>
+  <ng-template swiperSlide>
+      
+    <div class="container">
+      <div class="container__info">
+       <span><i class="fas fa-eye"></i>2350</span>
+       <span><i class="fas fa-comment-alt"></i>624</span>
+       <span><i class="fas fa-download"></i>1470</span>
+      </div>
+      <div class="container__profile">
+       <img
+        src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+        alt="people"
+       />
+       <div class="container__profile__text">
+        <h2>White Mountains</h2>
+        <p>by <b>Joseph Therrien</b></p>
+        <a href="">morea info</a>
+       </div>
+       <a href="">moreb info</a>
+      </div>
+      <a href="">morec info</a>
+     </div>
+  </ng-template>
+</swiper>
+</section>
+ 
+ -->
+
+<!--
+<swiper
+[config]="config"
+(swiper)="onSwiper($event)"
+[loop]="true"
+(slideChange)="onSlideChange()"
+>
+<ng-template swiperSlide>Slide 1</ng-template>
+<ng-template swiperSlide>Slide 2</ng-template>
+<ng-template swiperSlide>Slide 3</ng-template>
+<ng-template swiperSlide>Slide 4</ng-template>
+<ng-template swiperSlide>Slide 5</ng-template>
+<ng-template swiperSlide>Slide 6</ng-template>
+</swiper>
+-->
+
+<!--
+
+<swiper>
+  <ng-template swiperSlide>
+    <div>Slide</div>
+  </ng-template>
+
+  <ng-template swiperSlide *ngFor="let slide of items">
+    <div>
+      <div class="container">
+        <div class="container__info">
+         <span><i class="fas fa-eye"></i>2350</span>
+         <span><i class="fas fa-comment-alt"></i>624</span>
+         <span><i class="fas fa-download"></i>1470</span>
+        </div>
+        <div class="container__profile">
+         <img
+          src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+          alt="people"
+         />
+         <div class="container__profile__text">
+          <h2>White Mountains</h2>
+          <p>by <b>Joseph Therrien</b></p>
+          <a href="">morea info</a>
+         </div>
+         <a href="">moreb info</a>
+        </div>
+        <a href="">morec info</a>
+       </div>
+      
+    </div>
+  </ng-template>
+</swiper>-->
+
