--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,29 +1,42 @@
-<section class="center">
-  <span id="say-hello">
-    Hola, Yo soy <span id="my-name">¡Henrry Gutierrez!</span>
-  </span>
-  <div id="spacer"></div>
-  <div class="h1a">
-    <h1 class="h1">Mobile Developer</h1>
-    <h1 class="h1">FullStack Developer</h1>
-    <h1 class="h1">Java Developer</h1>
-  </div>
-  <div class="block"></div>
-</section>
 
-<section class="lottie">
+
+  <header>
+    <section class="say-hello">
+      <div class="say-hello-content">
+        <h3 id="my">!Hola¡, Soy</h3>
+        <h2 id="my-name">[Henrry Gutierrez]</h2>
+      </div>
+    </section>
+  </header>
+
+<main>
+  <section class="home-content">
+    <p>"Desarrollador Full Stack con más de 2 años de experiencia en tecnologías clave como Spring Boot, Angular, Python y MySQL.</p>
+    <p>Mi enfoque se centra en la entrega eficiente y de alta calidad a través de Docker y Kubernetes.</p>
+    <p>He participado en proyectos que se han administrado a través de la plataforma Jira utilizando metodologías ágiles y sprints.</p>
+  </section>
+</main>
+
+  <footer>
+    <div class="footer-container">
+        <span>Link</span>
+        <span>Github</span>
+        <span>instagram</span>
+    </div>
+  </footer>
+
+
+<!--<section class="lottie">
   <main
     lottie
     [options]="options2"
     (animationCreated)="animationCreated($event)"
   ></main>
-</section>
+</section>-->
 
-<ng-lottie
+<!--<ng-lottie
   width="200px"
   height="200px"
   containerClass="moving-box another-class"
   [options]="options"
-  class="computer"></ng-lottie>
-
-  
+  class="computer"></ng-lottie>-->
