--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,5 @@
+@use 'src/assets/scss/colors';
+
 /* Extra */
 $primary: #fff;
 $secondary: #ccc;
@@ -14,21 +16,27 @@ body {
 
 .logo {
   max-width: 200px;
+  position: relative;
+  left: 50px;
+  top: 50px;
+  height: 0;
+
 }
 
-.navbar {
-  align-items: center;
-  background: transparent;
-  /*box-shadow: 0 5px 20px rgba(0,0,0,0.2);*/
-  display: flex;
-  flex-direction: row;
-  font-family: sans-serif;
-  padding: 10px 50px;
+nav {
+  margin: 34px;
+  padding: 16px;
+  .nav-container {
+    align-items: center;
+    background: transparent;
+    /*box-shadow: 0 5px 20px rgba(0,0,0,0.2);*/
+    display: flex;
+    flex-direction: row;
+    font-family: sans-serif;
+    padding: 10px 50px;
+  }
 }
 
-.push-left {
-  margin-left: auto;
-}
 
 ul {
   display: flex;
@@ -39,153 +47,18 @@ ul {
 
   a {
     text-decoration: none;
-    padding: 8px;
-    border-radius: 8px;
-    color: #ccc;    
-    font-family: Lobster;
+    padding: 0 8px 0 8px;
+    color: #ccc;
+    font-family: Victor;
     font-size: 1.8em;
   }
 
   .active-link {
-    background-color: yellow;
+    /*background-color: yellow;*/
     color: black;
+    border-bottom: 5px solid colors.$yellow;
     transition: 0.8s;
     font-weight: 700;
     transition: .8s;
   }
 }
-
-/*
-/* Menu * /
-.hamburger {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  display: none;
-  outline: none;
-  height: 30px;
-  position: relative;
-  width: 30px;
-  z-index: 1000;
-  @media screen and (max-width: 768px) {
-    display: inline-block;
-  }
-  
-  &-line {
-    background: $ternary;
-    height: 3px;
-    position: absolute;
-    left: 0;
-    transition: all .2s ease-out; 
-    width: 100%;
-    
-    .hamburger:hover & {
-      background: #777;
-    }
-    
-    &-top {
-      top: 3px;
-    }
-    
-    .menu-active &-top {
-      top: 50%;
-      transform: rotate(45deg) translatey(-50%);
-    }
-    
-    &-middle {
-      top: 50%;
-      transform: translatey(-50%);
-    }
-    
-    .menu-active &-middle {
-      left: 50%;
-      opacity: 0;
-      width: 0;
-    }
-
-    &-bottom {
-      bottom: 3px;
-    }
-
-    .menu-active &-bottom {
-      bottom: 50%;
-      transform: rotate(-45deg) translatey(50%);
-    }
-  }
-}
-
-.nav-menu {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  transition: all .25s ease-in; 
-  
-  @media screen and (max-width: 768px) {
-    background: $primary;
-    flex-direction: column;
-    justify-content: center;
-    opacity: 0;
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    transform: translatey(-100%);
-    text-align: center;
-    
-    .menu-active & {
-      transform: translatey(0%);  
-      opacity: 1;
-    }
-  }
-  
-  .menu-item a {
-    color: $dark;
-    display: block;
-    line-height: 30px;
-    margin: 0px 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-    
-    &:hover {
-      color: lighten($dark, 20);
-      text-decoration: underline;
-    }
-
-    @media screen and (max-width: 768px) {
-      font-size: 20px;
-      margin: 8px;
-    }
-  }
-  
-  
-}
-
-.sub-nav {
-    border: 1px solid #ccc;
-    display: none;
-    position: absolute;
-    background-color: $primary;
-    padding: 5px 5px;
-    list-style: none; 
-    width: 230px;   
-    @media screen and (max-width: 768px) {
-      position: relative;
-      width: 100%;
-      display: none;
-      background-color: rgba(0, 0, 0, 0.20);
-      box-sizing: border-box;
-    }
-}
-
- .nav__link {
-   &:hover + .sub-nav {
-        display:block;
-
- }
-}
-
-.sub-nav {
-  &:hover {
-    display:block;
-  }
-}
-*/
