--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,196 +1,111 @@
-$primary: #e4ebf2;
-$secondary: #86c6e7;
-$ternary: #c4ddf2;
-$dark: #192e59;
 
-.center {
- /*  display: grid;
- align-content: center;
- justify-items: center;
-   align-items: center;
-  
-  padding: 20px;
-  margin-right: -50%; */
+@use 'src/assets/scss/colors';
 
-  position: absolute;
-  top: 40%;
-  left: 50%;  
-  transform: translate(-50%, -50%);
-}
-
-#say-hello {
-  font-size: 3em;
-  display: block;
-  font-family: monospace;
-  white-space: nowrap;
-  border-right: 4px solid;
-  width: 31ch;
-  animation: typing 5s steps(31), blink 0.5s infinite step-end alternate;
-  overflow: hidden;
-
-  #my-name {
-    font-weight: 700;
+header {
+  margin: 26px;
+  .say-hello {
+    display: flex;
+    justify-content: center;
   }
-}
 
-@keyframes typing {
-  from {
-    width: 0;
-  }
-}
+  .say-hello-content {
+    display: flex;
+    align-items: baseline;
+    gap: 8px;
+    color: colors.$yellow;
+    font-size: 2em;
+    font-family: monospace;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 31ch;
+    animation: typing 2s steps(31), blink 0.5s infinite step-end alternate;
+    overflow: hidden;
 
-@keyframes blink {
-  50% {
-    border-color: transparent;
-  }
-}
-
-.h1a {
-  display: grid;
-  width: 100%;  
-  justify-items: center;
-  animation: myAnim 6s forwards;   
-  
-  @keyframes myAnim {
-    0%{
-      opacity: 0;
-  }
-  99.99%{
-      opacity: 0;
-  }
-  100%{
-      opacity: 1;
-  }
-  }   
-}
-
-.h1 {
-  animation: morph-effect 7.5s infinite ease-in-out;
-  position: absolute;
-  font-size: 3.5em;
-  font-family: Lobster;
-  padding: 16px;
-  border-radius: 8px;
-
-  @keyframes morph-effect {
-    0%,
-    20%,
-    100% {
-      filter: blur(0px);
-      opacity: 1;
+    h2 {
+      font-weight: 700;
+      color: colors.$dark;
+      background: colors.$yellow;
+      padding: 6px;
+      border-radius: 6px;
     }
 
-    40%,
-    60% {
-      filter: blur(16px);
-      opacity: 0;
+    h3 {
+      color: colors.$gray;
+    }
+
+  }
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent;
     }
   }
 }
 
-.h1:nth-child(1) {
-  animation-delay: -2.5s;
-  background-color: #192e59;
-}
 
-.h1:nth-child(2) {
-  animation-delay: -5s;
-  background-color: #e91e63;
-}
-
-.h1:nth-child(3) {
-  animation-delay: -7.5s;
-  background-color: #86c6e7;
-}
-
-
-h1,
-h2 {
-  font-family: "Ubuntu";
-}
-
-
-
-#container-flip {
-  color: $primary;
-  text-transform: uppercase;
-  font-size: 36px;
-  font-weight: bold;
-  /*padding-top:200px; 
-  position:fixed;*/
-  width: 100%;
-  /*bottom:45%;
-  display:block;*/
-}
-
-
-.block {
-  width: 0%;
-  height: 90px;  
-  background: #e91e63;
-  position: absolute;
-  animation: secBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;  
+/*.main {
   display: flex;
-  animation-delay: 5s;
-}
-
-
-@keyframes secBlock {
-  0% {
-    width: 0%;
-    left: 0;
-  }
-  50% {
-    width: 100%;
-    left: 0;
-  }
-  100% {
-    width: 0;
-    left: 100%;
-  }
-}
-
-@keyframes mainFadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes secFadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 0.5;
-  }
-}
-
-.hidden {
-  opacity: 0;
-}
-
-.lottie {
-  opacity: 0.1;
-  position: absolute;
-  top: 50%;
+  row-gap: 16px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 26px;*/
+/*   position: absolute;
+  top: 40%;
   left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  z-index: -1;  
-  width: 100%;
-  height: 100%;
+  transform: translate(-50%, -50%);   */
+// }
+
+main {
+  .home-content {
+    max-width: 600px;
+    padding: 16px;
+    border-radius: 16px;
+    margin: 0 auto;
+    //box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    // background-color: colors.$gray;
+    display: grid;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+
+  p {
+    font-family: victor;
+    text-align: left;
+    color: colors.$gray;
+    line-height: normal;
+  }
+
+  }
+
 }
 
-.computer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
 
 
-#spacer {
-  height: 35px;
+
+
+
+/** FOOTER */
+
+footer {
+  margin: 16px;
+  display: grid;
+  justify-items: end;
+  .footer-container {
+    color: colors.$dark;
+    background-color: colors.$yellow;
+    max-width: 260px;
+    padding: 18px;
+    margin: 16px;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    border-radius: 8px;
+  }
 }
