--- a/src/app/pages/projects/projects.component.scss
+++ b/src/app/pages/projects/projects.component.scss
@@ -1,111 +1,47 @@
-section {
-    width: 400px;
+.container {
+  display: flex;
 }
 
 .card {
-    width: 600px;
-    height: 400px;
-    background-color: #fcfcfc;
-}
-
-$bright-color: #fff;
-@mixin bottom {
- position: absolute;
- right: 0;
- left: 0;
-}
-
-.container {
-    background: url("https://images.unsplash.com/photo-1574007557239-acf6863bc375?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    width: 350px;
-    height: 500px;
-    position: relative;
-    box-shadow: 0 0 50px rgba(0, 0, 0, 0.315);
-    .container__info {
-     @include bottom;
-     bottom: 20%;
-     display: flex;
-     align-items: flex-end;
-     padding: 15px 30px;
-     color: $bright-color;
-     span {
-      margin-right: 20px;
-     }
-     i {
-      margin-right: 10px;
-     }
-    }
-    .container__profile {
-     background-color: #e4f2fd;
-     display: flex;
-     align-items: center;
-     padding: 20px;
-     @include bottom();
-     bottom: 0;
-     img {
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      object-position: center;
-      object-fit: cover;
-      margin-right: 10px;
-     }
-     h2 {
-      color: #334454;
-      font-size: 1.2rem;
-     }
-     p {
-      color: #a1b2bc;
-      font-size: 0.8rem;
-     }
-     p b {
-      font-style: italic;
-     }
-    }
-   }
-
-   a {
-    color: #000;
-    font-size: 0.8rem;
-    text-decoration: none;
- }
-
-
-.mySwiper {
-  height: 190px
-}
- 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
+  background-color: #222222;
+  border-radius: 10px;
+  padding: 20px;
   text-align: center;
-  font-size: 18px;
-  background: #fff;
-  color: #000;
-  /* Center slide text vertically */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  color: #ffffff;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
+.avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
   object-fit: cover;
+  margin-bottom: 10px;
+}
+
+h2 {
+  margin: 0;
+  font-size: 24px;
+}
+
+p {
+  margin-top: 5px;
+  font-size: 18px;
+  opacity: 0.8;
+}
+
+.social-links {
+  margin-top: 20px;
+}
+
+.social-links a {
+  color: #ffffff;
+  font-size: 24px;
+  margin: 0 5px;
+  opacity: 0.7;
+  transition: opacity 0.3s ease;
+}
+
+.social-links a:hover {
+  opacity: 1;
 }
