change about me

--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -1,6 +1,8 @@
 
 <p>
-    Empecé mi carrera como fullstack developer, implementando un sistema 
+    Empecé mi carrera como fullstack developer, implementando un sistema
     transaccional para la micro empresa Lavanderia Rosita. En la actualidad
-    me encuentro trabajando para la empresa Byte, como practicante programador java.    
+    me encuentro trabajando para la empresa Byte, como practicante programador java.
 </p>
+
+<div id="parentdiv"></div>
