--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -35,7 +35,7 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2>Contacto</h2>
-            <p>¡Me encantaría hablar contigo! Contáctame en: tu@email.com</p>
+            <p>¡Me ncantaría hablar contigo! Contáctame en: tu&#64;email.com</p>
         </div>
     </section>
 </main>
