--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -1,4 +1,14 @@
 
+
+<div class="card">
+    <img src="https://th.bing.com/th/id/R.bcda51fb80d8311097104a5fac0ccb5f?rik=pV0JQy93ny1ITg&pid=ImgRaw&r=0" alt="">
+
+    <div class="card-content">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi corrupti nisi commodi et magnam quibusdam reprehenderit natus tenetur saepe in, nihil molestias officiis, officia similique. Repellendus a animi id amet.
+    </div>
+
+</div>
+
 <p>
     Empecé mi carrera como fullstack developer, implementando un sistema
     transaccional para la micro empresa Lavanderia Rosita. En la actualidad
