--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,18 @@
 <main>
     <section class="container">
         <app-header></app-header>
-
         <!-- <main [@routeAnimations]="prepareRoute(outlet)" class="content">
             <router-outlet #outlet="outlet"></router-outlet>
         </main> -->
-
         <app-home></app-home>
-        <!--<app-projects></app-projects>
-        <app-about-me></app-about-me>
+        <!--<app-about-me></app-about-me>
 
         <router-outlet></router-outlet>-->
 
         <!--<app-bottomnav></app-bottomnav>-->
     </section>
 </main>
+
+<app-projects/>
+
+<app-about-me/>
