--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,10 +3,14 @@ main {
     height: 100vh;
     display: flex;
 }
+
 .container {
     margin: auto;
     background-color: colors.$dark;
     border-radius: 26px;
     max-width: 1200px;
     min-width: 900px;
+    box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
 }
