--- a/src/app/pages/about-me/about-me.component.scss
+++ b/src/app/pages/about-me/about-me.component.scss
@@ -1,3 +1,43 @@
+
+.card {
+  width: 350px;
+  overflow: hidden;
+  box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+}
+
+img {
+  margin: 16px;
+  object-fit: cover;
+  border-radius: 8px;
+  max-width: 90%;
+  transition: transform 500ms ease-in;
+}
+
+img:hover {
+  max-height: 90%;
+    transform: scale(1.3);
+    transition: transform 500ms ease-out;
+    transition-delay: 500ms;
+
+}
+
+.card-content {
+  margin: 16px;
+  background-color: crimson;
+  transition: transform 500ms ease-out;
+  height: 90px;
+}
+
+.card-content:hover {
+  transition: transform 500ms ease-out;
+  transform: translateY(-90px);
+  height: 190px;
+}
+
+
+
 #parentdiv {
     position: relative;
     width: 150px;
