--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -5,16 +5,17 @@
 <!-- <a [routerLink]="['/projects/university']" routerLinkActive="router-link-active"> {{ "go to university" | uppercase }}</a>
  -->
 
- 
-<section class="container">
-  <div class="card" *ngFor="let item of [1,2,3,4,5,6,4,7,9,8]">
-    <img src="avatar.png" alt="Avatar" class="avatar">
-    <h2>Daniel</h2>
-    <p>Desarrollador Full Stack</p>
-    <div class="social-links">
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-    </div>
- </div>
-</section>
+<main class="projects">
+  <section class="projects-container">
+    <div class="card" *ngFor="let item of [1,2,3,4,5,6,4,7,9,8]">
+      <img src="avatar.png" alt="Avatar" class="avatar" loading="lazy">
+      <h2>Daniel</h2>
+      <p>Desarrollador Full Stack</p>
+      <div class="social-links">
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+      </div>
+   </div>
+  </section>
+</main>
