--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,41 @@
 
-<main>
-    <section class="container">
-        <app-header></app-header>
+
+
+
+
+<aside class="container">
+    <app-profile/>
+</aside>
+
+<main class="container">
+    <app-main-content/>
+</main>
+
+<nav class="container">
+    <app-nav/>
+</nav>
+
+
+
+
+
+
+
+<!-- <main> -->
+    <!-- <section class="container"> -->
+        <!-- <app-header></app-header> -->
         <!-- <main [@routeAnimations]="prepareRoute(outlet)" class="content">
             <router-outlet #outlet="outlet"></router-outlet>
         </main> -->
-        <app-home></app-home>
+        <!-- <app-home></app-home> -->
         <!--<app-about-me></app-about-me>
 
         <router-outlet></router-outlet>-->
 
         <!--<app-bottomnav></app-bottomnav>-->
-    </section>
-</main>
+    <!-- </section> -->
+<!-- </main> -->
 
-<app-projects/>
+<!-- <app-projects/>
 
-<app-about-me/>
+<app-about-me/> -->
