--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,26 @@
 @use 'src/assets/scss/colors';
 main {
-    height: 100vh;
-    display: flex;
+    // height: 100vh;
+    // display: flex;
 }
 
 .container {
-    margin: auto;
+    // margin: auto;
     background-color: colors.$dark;
     border-radius: 26px;
-    max-width: 1200px;
-    min-width: 900px;
     box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
+}
+
+aside {
+    width: 350px;
+}
+
+main {
+    width: 420px;
+}
+
+nav {
+    width: 120px;
 }
