--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,15 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 
 body {
-    height: 100%;
+    // height: 100%;
     background-color: colors.$gray;
     color: colors.$white;
+}
+
+app-root {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100vh;
 }
