refactor: home code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,22 @@
 
 
+<app-header/>
+
+<section>
+    <aside class="content">
+        <app-profile/>
+    </aside>
+    
+    <main class="content">
+        <app-main-content/>
+    </main>
+    
+    <nav class="content">
+        <app-nav/>
+    </nav>
+</section>
 
 
-
-<aside class="container">
-    <app-profile/>
-</aside>
-
-<main class="container">
-    <app-main-content/>
-</main>
-
-<nav class="container">
-    <app-nav/>
-</nav>
+<app-footer/>
 
 
-
-
-
-
-
-<!-- <main> -->
-    <!-- <section class="container"> -->
-        <!-- <app-header></app-header> -->
-        <!-- <main [@routeAnimations]="prepareRoute(outlet)" class="content">
-            <router-outlet #outlet="outlet"></router-outlet>
-        </main> -->
-        <!-- <app-home></app-home> -->
-        <!--<app-about-me></app-about-me>
-
-        <router-outlet></router-outlet>-->
-
-        <!--<app-bottomnav></app-bottomnav>-->
-    <!-- </section> -->
-<!-- </main> -->
-
-<!-- <app-projects/>
-
-<app-about-me/> -->
