--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,26 +1,31 @@
 @use 'src/assets/scss/colors';
-main {
-    // height: 100vh;
-    // display: flex;
+
+section {
+    display: flex;
+    gap: 16px;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 2rem 1.5rem 0 1.5rem;
+    background-color: #f0f0ff;
 }
 
-.container {
-    // margin: auto;
+.content {
+    padding: 16px;
     background-color: colors.$dark;
-    border-radius: 26px;
+    border-radius: .8rem;
     box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 10px 37px -9px rgba(0,0,0,0.75);
 }
 
 aside {
-    width: 350px;
+    width: 18rem;;
 }
 
 main {
-    width: 420px;
+    width: 48rem;
 }
 
 nav {
-    width: 120px;
+    width: 5rem;
 }
