--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,12 +19,5 @@ body {
     // height: 100%;
     background-color: colors.$gray;
     color: colors.$white;
-}
-
-app-root {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100vh;
+    overflow-x: hidden;
 }
