feature: navigation list

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,12 @@
-<p>nav works!</p>,
+<section class="nav-card">
+    @for (item of items; track $index) {
+        <section class="nav-card-item">
+            <div class="nav-card-icon">        
+                <i [ngClass]='item.iconName + " " + item.iconSize'></i>
+            </div>
+            <div class="nav-card-label">
+                {{ item.label }}
+            </div>
+        </section>
+    }
+</section>
