--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,3 +1,25 @@
 :host {
   display: block;
 }
+
+header {
+  height: 4rem;
+  width: 100vw;
+  background-color: darksalmon;
+}
+
+.nav-card {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.nav-card-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: .2rem;
+  background-color: crimson;
+  border-radius: 8px;
+  padding: 6px;
+}
