--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,1 +1,9 @@
-<p>main-content works!</p>,
+
+<section>
+    @for (item of items; track $index) {
+        <div class="card">
+            {{ item }} - {{ $index }}
+        </div>
+    }
+</section>
+
