changes, routes, img, style

--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -1,9 +1,9 @@
 
-<section>
-    @for (item of items; track $index) {
-        <div class="card">
-            {{ item }} - {{ $index }}
-        </div>
-    }
-</section>
 
+
+<section>
+
+    <router-outlet></router-outlet>
+
+
+</section>
