--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,7 +1,7 @@
 <section class="nav-card">
     @for (item of items; track $index) {
-        <section class="nav-card-item">
-            <div class="nav-card-icon">        
+        <section class="nav-card-item" [routerLink]="['/projects']" routerLinkActive="router-link-active" >
+            <div class="nav-card-icon">
                 <i [ngClass]='item.iconName + " " + item.iconSize'></i>
             </div>
             <div class="nav-card-label">
