--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,4 +1,9 @@
-<p>profile works!</p>,
+
+<section class="content-img">
+    <img src="assets/imgs/garou.webp" alt="">
+</section>
+
+<p>profile works!</p>
 <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates eaque officia aspernatur quo nesciunt molestiae consequuntur iste facere magni dolorem saepe natus, aut quia molestias quidem laboriosam tempore facilis similique?
 </p>
