--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,10 +2,10 @@
 
 section {
     display: flex;
-    gap: 16px;
+    gap: 2rem;
     justify-content: center;
     align-items: flex-start;
-    margin: 2rem 1.5rem 0 1.5rem;
+    margin: 6rem 1.5rem 0 1.5rem;
     background-color: #f0f0ff;
 }
 
