--- a/src/app/main-content/pages/home/home.component.scss
+++ b/src/app/main-content/pages/home/home.component.scss
@@ -2,6 +2,34 @@
 @use 'src/assets/scss/colors';
 
 header {
+  height: 4rem;
+  background-color: oldlace;
+}
+
+.card {
+  height: 250px;
+}
+
+section {
+  height: 80vh;
+  overflow-y: auto;
+}
+
+/***  scroll bar style  ***/
+::-webkit-scrollbar {
+  width: 6px;
+  overflow-y: scroll;
+  background: grey;
+  box-shadow: inset 0 0 4px #707070;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: salmon;
+  border-radius: 8px;
+}
+
+header {
   margin: 26px;
   .say-hello {
     display: flex;
