--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -1,3 +1,22 @@
 :host {
   display: block;
 }
+
+img {
+  height: 9rem;
+  width: 12rem;
+  border-radius: 1rem;
+  object-fit: cover;
+  box-shadow: 0px 0px 42px -9px rgba(0,0,0,0.1);
+  border: 0.3rem solid #fa8072;
+}
+
+.content-img {
+  display: flex;
+  justify-content: center;
+  margin-top: -6rem;
+}
+
+p {
+  line-height: normal;
+}
