--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -21,7 +21,7 @@
 <main class="projects">
   <section class="projects-container">
     <div class="card" *ngFor="let item of [1,2,3,4,5,6,4,7,9,8]">
-      <img src="avatar.png" alt="Avatar" class="avatar" loading="lazy">
+      <img src="assets/imgs/garou.webp" alt="Avatar" class="avatar" loading="lazy">
       <h2>Daniel</h2>
       <p>Desarrollador Full Stack</p>
       <div class="social-links">
