feat: build detail items from list

--- a/src/app/main-content/pages/home/home.component.html
+++ b/src/app/main-content/pages/home/home.component.html
@@ -1,6 +1,6 @@
 
 <header>
-    <h2>Title</h2>
+    <h2>Title its homes, maybe aqui va algo de lo que hicimos como un Curriculum vitae senciiloo o algo simlar</h2>
 </header>
 
 @for (item of items; track $index) {
