--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -20,3 +20,59 @@ img {
 p {
   line-height: normal;
 }
+
+header {
+  margin: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  align-items: center;
+
+  h2 {
+    font-size: x-large;
+  }
+
+  .subtitle-container {
+    padding: .5rem;
+    background: #fa8072;
+    border-radius: .2rem;
+  }
+
+  h3 {
+    font-size: small;
+  }
+
+  .social-media-container {
+    display: flex;
+    gap: 1rem;
+    flex-wrap: wrap;
+
+    a {
+      padding: .2rem;
+      border-radius: .2rem;
+      background: #fa8072;
+    }
+  }
+}
+
+main {
+  margin-top: 3rem;
+  padding: 1rem;
+  border-radius: .5rem;
+  background: #fa8072;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .information-container {
+    display: flex;
+    flex-direction: row;
+    gap: .5rem;
+  }
+
+  .detail-container {
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+  }
+}
