--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -26,7 +26,7 @@
         <div class="information-container">
             <span>icon</span>
             <div class="detail-container">
-                <span class="title">title</span>
+                <span class="">title</span>
                 @switch (item.type) {
                     @case ('phone') {
 
