fix: identifiers for sections

--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -5,7 +5,7 @@
 <!-- <a [routerLink]="['/projects/university']" routerLinkActive="router-link-active"> {{ "go to university" | uppercase }}</a>
  -->
 
- <header>
+ <header id="projects-header">
     <div class="title">
       Portfolio - projects
     </div>
