--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,47 +1,34 @@
 
-<picture>
 
-</picture>
 
 <section class="content-img">
-    <img src="assets/imgs/garou.webp" alt="">
+    <picture>
+        <img id="img-profile" src="assets/imgs/garou.webp" alt="">
+    </picture>
 </section>
 
 
-<header>
+<header id="profile-header">
     <h2>Henrry Gutierrez</h2>
     <div class="subtitle-container">
         <h3>Full Stack Dev</h3>
     </div>
     <div class="social-media-container">
         @for (item of socialMediaItems; track $index) {
-            <a href="http://"> <span [ngClass]="item.icon">icon</span> </a>
+            <!--<a href="http://"> <span [ngClass]="item.icon">icon</span> </a>-->
+            <img class="icon-img" [src]="item.icon" alt="">
         }
     </div>
 </header>
 
 
-<main>
+<main id="profile-container">
     @for (item of informationItems; track $index) {
         <div class="information-container">
-            <span>icon</span>
-            <div class="detail-container">
-                <span class="">title</span>
-                @switch (item.type) {
-                    @case ('phone') {
-
-                        <h3><a href="tel:+5109090">{{item.information}}</a></h3>
-                    }
-
-                    @case ('email') {
-                        <h3><a href="mailto:">{{item.information}}</a></h3>
-                    }
-
-                    @default {
-                        <h3>item.information</h3>
-                    }
-                }
-            </div>
+            <img class="icon-img" [src]="item.icon" alt="" [title]="item.title">
+            <!-- <div class="detail-container">
+                <span class="">{{item.title}}</span>
+            </div> -->
         </div>
 
     }
