style: change styles

--- a/src/app/main-content/pages/about-me/about-me.component.html
+++ b/src/app/main-content/pages/about-me/about-me.component.html
@@ -1,21 +1,11 @@
+<header id="about-me-header">
+    <h1>About Me</h1>
+    <span></span>
+</header>
 
-<section>
-  <div class="card">
-
-    <img src="https://th.bing.com/th/id/R.bcda51fb80d8311097104a5fac0ccb5f?rik=pV0JQy93ny1ITg&pid=ImgRaw&r=0" alt="">
-
-    <div class="card-content">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi corrupti nisi commodi et magnam quibusdam reprehenderit natus tenetur saepe in, nihil molestias officiis, officia similique. Repellendus a animi id amet.
-    </div>
-
-  </div>
-
-  <p>
-    Empecé mi carrera como fullstack developer, implementando un sistema
-    transaccional para la micro empresa Lavanderia Rosita. En la actualidad
-    me encuentro trabajando para la empresa Byte, como practicante programador java.
-  </p>
-
-  <div id="parentdiv"></div>
-
-</section>
+<main id="about-me-container">
+    <p>Soy un ingeniero de software, desarrollador web y desarrollador de aplicaciones móviles.</p>
+    <p>Me interesa la tecnología y el desarrollo web, especialmente en el área de Angular.</p>
+    <p>Actualmente trabajo en el desarrollo de aplicaciones móviles para la empresa</p>
+    <p>.............</p>
+</main>
