--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,7 +11,7 @@
 <header id="profile-header">
     <h2>Henrry Gutierrez</h2>
     <div class="subtitle-container">
-        <h3>Full Stack Dev</h3>
+        <h3>Software Engineer</h3>
     </div>
     <div class="social-media-container">
         @for (item of socialMediaItems; track $index) {
