--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,3 +1,5 @@
+@use 'src/assets/scss/colors';
+
 :host {
   display: block;
 }
@@ -19,7 +21,11 @@ header {
   flex-direction: column;
   align-items: center;
   row-gap: .2rem;
-  background-color: crimson;
+  background-color: colors.$yellow;
   border-radius: 8px;
   padding: 6px;
+}
+
+.nav-card-label {
+  color: colors.$dark;
 }
