--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -24,24 +24,27 @@ p {
 }
 
 #profile-header {
-  margin: 1rem 0;
+  /*margin: 1rem 0;*/
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
   align-items: center;
 
   h2 {
+    margin: .5rem;
     font-size: x-large;
   }
 
   .subtitle-container {
-    padding: .5rem;
-    background: #fa8072;
+    padding: 0 .5rem;
+    background: colors.$yellow;
     border-radius: .2rem;
   }
 
   h3 {
-    font-size: small;
+    padding: 0;
+    color: colors.$dark;
+    font-size: medium;
   }
 
   .social-media-container {
@@ -58,14 +61,14 @@ p {
 }
 
 #profile-container {
-  margin-top: 3rem;
+  margin-top: 1.2rem;
   padding: 1rem;
   border-radius: .5rem;
-  background: #fa8072;
+  background: colors.$yellow;
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
-
+  justify-content: center;
   /*.information-container {
 
   }*/
@@ -83,7 +86,7 @@ p {
   border-radius: .2rem;
   padding: .4rem;
   border: 0.0rem solid #ffffff;
-  background-color: #ffffff;
+  background-color: colors.$white;
 }
 
 .info-icon {
