--- a/src/app/main-content/pages/home/home.component.html
+++ b/src/app/main-content/pages/home/home.component.html
@@ -1,10 +1,28 @@
 
 <header>
-    <h2>Title its homes, maybe aqui va algo de lo que hicimos como un Curriculum vitae senciiloo o algo simlar</h2>
+  <h2>Experience</h2>
 </header>
 
-@for (item of items; track $index) {
-  <div class="card">
-      {{ item }} - {{ $index }}
-  </div>
-}
+<div class="timeline">
+
+  @for (event of events; track $index) {
+    <div class="timeline-item" [style.animationDelay.s]="calculateDelay($index)"  [class.left]="$index % 2 === 0"
+    [class.right]="$index % 2 !== 0">
+      <div class="timeline-content">
+          <h4 class="timeline-date">{{ event.year }}</h4>
+          <h4 class="timeline-title">{{ event.title }}</h4>
+          <p class="timeline-description">{{ event.description }}</p>
+          <div class="timeline-skills">
+            <span class="skill-tag">Angular 18</span>
+            <span class="skill-tag">.NET Core</span>
+            <span class="skill-tag">Azure</span>
+            <span class="skill-tag">CI/CD</span>
+          </div>
+          <div class="timeline-dot"></div>
+        </div>
+    </div>
+  }
+
+  <div class="timeline-end"></div>
+
+</div>
