style: enhance navigation and layout, update project titles and color scheme, and improve responsive design

--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -7,9 +7,9 @@
 
  <header id="projects-header">
     <div class="title">
-      Portfolio - projects
+      Projects
     </div>
-    <nav>
+    <nav id="projects-nav">
       <a href="">All</a>
       <a href="">Full Stack</a>
       <a href="">Frontend</a>
