feat: overhaul footer layout and styling, add ExperienceEventInterface, and include time_line image for better presentation

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<footer>footer works!</footer>
+<footer class="footer">
+    <div class="container">
+        <p>&copy; 2025 Henrry Gutierrez - Mi Portafolio </p>
+    </div>
+</footer>
