--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,17 @@
 @use 'src/assets/scss/colors';
 
-:host {
-  display: block;
-}
-
-footer {
+/* Pie de Página */
+.footer {
+  padding: 20px 0;
+  text-align: center;
   height: 90px;
   margin-top: 16px;
+  color: colors.$dark;
   background-color: colors.$blue;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
