feat: add title header main content

--- a/src/app/main-content/pages/about-me/about-me.component.html
+++ b/src/app/main-content/pages/about-me/about-me.component.html
@@ -1,7 +1,4 @@
-<header id="about-me-header">
-    <h1>About Me</h1>
-    <span></span>
-</header>
+<app-main-content-header [title]="'About me'" />
 
 <main id="about-me-container">
     <p>Soy un ingeniero de software, desarrollador web y desarrollador de aplicaciones móviles.</p>
