--- a/src/app/main-content/pages/certifications/certifications.component.html
+++ b/src/app/main-content/pages/certifications/certifications.component.html
@@ -1,3 +1,6 @@
+<app-main-content-header [title]="'Certifications'" />
+
+
 <header class="header">
     <nav class="navbar">
         <div class="container">
