--- a/src/app/main-content/pages/projects/projects.component.html
+++ b/src/app/main-content/pages/projects/projects.component.html
@@ -1,22 +1,17 @@
+<app-main-content-header [title]="'Projects'" />
 
-
-<!-- <router-outlet></router-outlet> -->
-
-<!-- <a [routerLink]="['/projects/university']" routerLinkActive="router-link-active"> {{ "go to university" | uppercase }}</a>
- -->
-
- <header id="projects-header">
-    <div class="title">
-      Projects
-    </div>
-    <nav id="projects-nav">
-      <a href="">All</a>
-      <a href="">Full Stack</a>
-      <a href="">Frontend</a>
-      <a href="">Backend</a>
-      <a href="">Mobile</a>
-    </nav>
- </header>
+<header id="projects-header">
+  <div class="title">
+    Projects
+  </div>
+  <nav id="projects-nav">
+    <a href="">All</a>
+    <a href="">Full Stack</a>
+    <a href="">Frontend</a>
+    <a href="">Backend</a>
+    <a href="">Mobile</a>
+  </nav>
+</header>
 
 <main class="projects">
   <section class="projects-container">
