--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -45,6 +45,7 @@ p {
     padding: 0;
     color: colors.$dark;
     font-size: medium;
+    margin: .6rem .8rem;
   }
 
   .social-media-container {
