--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,13 @@
 
-<section class="nav-card">
+<header class="nav-card">
     @for (item of items; track $index) {
-        <main class="nav-card-item" [routerLink]="[item.route]" routerLinkActive="router-link-active" >
+        <nav class="nav-card-item" [routerLink]="[item.route]" routerLinkActive="router-link-active" >
             <div class="nav-card-icon">
                 <i [ngClass]='item.iconName + " " + item.iconSize'></i>
             </div>
             <div class="nav-card-label">
                 {{ item.label }}
             </div>
-        </main>
+        </nav>
     }
-</section>
+</header>
