--- a/src/app/main-content/pages/about-me/about-me.component.html
+++ b/src/app/main-content/pages/about-me/about-me.component.html
@@ -1,8 +1,11 @@
 <app-main-content-header [title]="'About me'" />
 
-<main id="about-me-container">
-    <p> Soy un ingeniero de software, desarrollador web y desarrollador de aplicaciones móviles.</p>
-    <p> Me interesa la tecnología y el desarrollo web, especialmente en el área de Angular.</p>
-    <p> Actualmente trabajo en el desarrollo de aplicaciones móviles para la empresa</p>
-    <p>.............</p>
-</main>
+<section id="about-me-container">
+    <p>
+        Senior Full Stack Developer with extensive expertise in Java Spring Boot and Angular frameworks, specialized in
+        designing and implementing scalable microservices architectures for the financial sector. Demonstrated
+        leadership capabilities in agile development environments with a proven track record of delivering high-quality
+        enterprise solutions. Committed to technical excellence, continuous innovation, and collaborative team
+        development while maintaining strong focus on business objectives and stakeholder requirements.
+    </p>
+</section>
